example 1 proto 기본 예제 업데이트

--- a/example1-1/system1/Dockerfile
+++ b/example1-1/system1/Dockerfile
@@ -20,7 +20,7 @@ COPY requirements-grpc.txt .
 RUN pip install --no-cache-dir -r requirements-grpc.txt
 
 # 예제 파일 생성
-#RUN git clone -b v1.73.0 --depth 1 --shallow-submodules https://github.com/grpc/grpc
+RUN git clone -b v1.73.0 --depth 1 --shallow-submodules https://github.com/grpc/grpc
 
 # 마이크로 서비스 관련 라이브러리 설치
 COPY requirements.txt .
